BanDo/osm_output.txt
python :   File "<string>", line 80
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 80:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'    # {n} (OSM #{b[" osm_id\]})')
                               ^
SyntaxError: unterminated string literal (detected at line 80)
